      - added the typemap and infer keyword
        to help in the mapping of types and
        construction of inferred services
        - added tests for this

    * Bread::Board::Container
      - added the typemap feature and added
        the ->resolve( type => $type ) call
        - added tests for this

    * Bread::Board::Service::Inferred
      - added this and tests for it

0.14 Tues. Aug. 24, 2010
    * Bread::Board::Container
      - added the ->resolve method to replace
        the ->fetch( $service )->get pattern
        that annoys mst so much.
        - adjusted all the tests to account
          for this change.
        - adjusted all the docs to now use
          this approach instead

    - now using Try::Tiny for all exception
      handling (except the Deferred service)

    * Bread::Board::Service::WithDependencies
      - if you want to depend on a parameterized
        service, now you can and it will return
        a Bread::Board::Service::Deferred::Thunk
        that you can call ->inflate on and pass
        in the parameters for it.
        - added tests for this

    * Bread::Board::Service::Deferred::Thunk
      - added this + tests for it

0.13 Fri. April 23, 2010
    * Bread::Board
      - making the include keyword handle
        compilation errors better (doy)
          - added test for this

    * Bread::Board::Container
      Bread::Board::Container::Parameterized
      - it is now possible to store parameterized
        containers within regular containers and
        have them behave properly
          - added tests for this

    * Bread::Board::Manual::Example::*
      - adding some examples of ways to use
        Bread::Board to the manual
          - added tests to confirm they work

0.12 Sun. April 18, 2010
    * Bread::Board
      - added the `include` keyword which will evaluate
        an external file within your Bread::Board
        configuration
          - added tests for this